TestSuite/errors/err0295.pas
type
  Enum<T> = (X, Y);

begin
end.